# team-board-api

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
app/core/: config.py
