[tool.poetry]
name = "team-board-api"
version = "0.1.0"
description = ""
authors = ["JaeheeLee-be <clodusky1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.1.3"
fastapi = "^0.132.0"
uvicorn = "^0.41.0"
sqlalchemy = "^2.0.46"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.0,<9.0.0)"
]
